terraform/podman-exporter-endpoint.yaml
apiVersion: v1
kind: Service
metadata:
  name: podman-exporter
  namespace: monitoring
  labels:
    app: podman-exporter
spec:
  ports:
    - name: metrics
      port: 9882
      targetPort: 9882
---
apiVersion: v1
kind: Endpoints
metadata:
  name: podman-exporter
  namespace: monitoring
subsets:
  - addresses:
      - ip: 192.168.49.1
    ports:
      - name: metrics
        port: 9882
