terraform/podman-exporter-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: podman-exporter
  namespace: monitoring
subsets:
  - addresses:
      - ip: 192.168.49.1
    ports:
      - name: metrics
        port: 9882
