terraform/vault-server-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: vault-server-netpol
  namespace: vault
  annotations:
    kube-score/ignore: networkpolicy-targets-pod
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vault
      component: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
      ports:
        - protocol: TCP
          port: 8200
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
      ports:
        - protocol: TCP
          port: 8200
